force-app/main/default/objects/ULBC_Xero_Settings__c/ULBC_Xero_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide settings for the Phase 6A Xero income import. Hierarchy type allows org-default values with optional per-user overrides.</description>
    <label>ULBC Xero Settings</label>
</CustomObject>