force-app/main/default/objects/ULBC_Xero_Settings__c/fields/DefaultFundType__c.field-meta.xml
<CustomField>
    <fullName>DefaultFundType__c</fullName>
    <description>Default value applied to Opportunity.ULBC_Fund_Type__c when importing from Xero. Defaults to &apos;Unrestricted&apos; until campaign attribution is built (post-v1).</description>
    <label>Default Fund Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>