force-app/main/default/objects/ULBC_Xero_Settings__c/fields/LastSyncedAt__c.field-meta.xml
<CustomField>
    <fullName>LastSyncedAt__c</fullName>
    <description>Watermark — UpdatedDateUTC of the most recent Xero BankTransaction successfully imported. The next importer run pulls only transactions modified after this timestamp. Updated at the end of every successful page; left untouched on errors so a failed run can be retried without skipping data.</description>
    <label>Last Synced At</label>
    <type>DateTime</type>
</CustomField>