force-app/main/default/objects/ULBC_Xero_Settings__c/fields/OrphanChatterUserId__c.field-meta.xml
<CustomField>
    <fullName>OrphanChatterUserId__c</fullName>
    <description>Salesforce User Id (15- or 18-char) to @-mention on the Chatter feed item created on each orphan Opportunity. Typically the Fundraiser or Admin who triages unassigned income.</description>
    <label>Orphan Chatter User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>