force-app/main/default/objects/ULBC_Xero_Settings__c/fields/OrphanNotificationsEnabled__c.field-meta.xml
<CustomField>
    <fullName>OrphanNotificationsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master switch for the orphan-Opportunity email digest sent at the end of each Xero import page. Off by default — flip to true once recipients are confirmed in OrphanNotifyEmails.</description>
    <label>Orphan Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>