force-app/main/default/objects/ULBC_Xero_Settings__c/fields/OrphanNotifyEmails__c.field-meta.xml
<CustomField>
    <fullName>OrphanNotifyEmails__c</fullName>
    <description>Comma- semicolon- or whitespace-separated list of email addresses that receive the orphan-Opportunity digest at the end of each Xero import page. Leave blank to disable email even if OrphanNotificationsEnabled is true.</description>
    <label>Orphan Notify Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>